--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: black;
-$text-color: white;
+$primary-color: rgb(245, 9, 155);
+$text-color: rgb(9, 9, 9);
 $mobile: 768px;
 
 $font-weights: (
